public_html/assets/css/style.css
/* ... */
.to-top:hover {
    border-color: #ffd910;
    -webkit-box-shadow: none;
    box-shadow: none;
    background-color: #ffd910;
}
.to-top:hover i {
    color: #192330;
}
.to-top i {
    -webkit-transition: 0.3s ease-in-out;
    transition: 0.3s ease-in-out;
    color: #fff;
}
.to-top.active {
    opacity: 1;
    pointer-events: auto;
}
.s-main-slider {
    position: relative;
    background-color: #fff;
    overflow: hidden;
}
/*.s-main-slider:before {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 47px;
    -webkit-clip-path: polygon(0 100%, 75% 0, 100% 100%);
    clip-path: polygon(0 100%, 75% 0, 100% 100%);
    background-color: #fafafa;
    z-index: 2;
}*/
.main-soc-list {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    position: absolute;
    top: 41%;
    right: 78px;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    z-index: 4;
    -webkit-writing-mode: tb-rl;
    -ms-writing-mode: tb-rl;
    writing-mode: tb-rl;
}
.main-soc-list li {
    margin-bottom: 30px;
}
.main-soc-list li:last-child {
    margin-bottom: 0;
}
.main-soc-list li a {
    color: rgba(0, 0, 0, 0.5);
    text-transform: uppercase;
    padding: 5px 0;
    display: block;
    position: relative;
}
.main-soc-list li a:before {
    content: "";
    position: absolute;
    top: 50%;
    left: -5px;
    height: 0;
    width: 3px;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    -webkit-transition: 0.35s ease;
    transition: 0.35s ease;
    background-color: #ffd910;
    z-index: -1;
}
.main-soc-list li a:hover {
    color: #ffd910;
}
.main-soc-list li a:hover:before {
    height: 100%;
}
.main-slider .main-slide {
    text-align: center;
    position: relative;
}
.main-slider .main-slide .main-slide-bg {
    position: absolute;
    background-position: bottom center;
    background-repeat: no-repeat;
    background-size: 100% auto;
    bottom: 0;
    left: 50%;
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
    width: 70%;
    opacity: 0;
    height: 100%;
    -webkit-transition: 0.3s ease-in;
    transition: 0.3s ease-in;
}
.main-slider .main-slide .container {
    min-height: 828px;
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    position: relative;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    z-index: 2;
}
.main-slider .main-slide .main-slide-info {
    padding: 102px 0 10px;
}
.main-slider .main-slide .main-slide-info .title {
    font-size: 90px;
    line-height: 0.85em;
    margin-bottom: 21px;
    text-align: center;
    -webkit-transform: translateY(70px);
    transform: translateY(70px);
    opacity: 0;
    -webkit-transition: 0.2s ease-in 0.2s;
    transition: 0.2s ease-in 0.2s;
    text-align: center;
}
.main-slider .main-slide .main-slide-info p {
    max-width: 470px;
    margin: 0 auto 34px;
    color: #000;
    text-align: center;
    -webkit-transform: translateY(70px);
    transform: translateY(70px);
    opacity: 0;
    -webkit-transition: 0.2s ease-in 0.1s;
    transition: 0.2s ease-in 0.1s;
}
.main-slider .main-slide .main-slide-info .btn {
    -webkit-transform: translateY(70px);
    transform: translateY(70px);
    opacity: 0;
    -webkit-transition: 0.2s ease-in;
    transition: 0.2s ease-in;
}
.main-slider .main-slide .slide-img-cover {
    position: relative;
    max-height: 478px;
    height: 478px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: end;
    -ms-flex-align: end;
    align-items: flex-end;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}
.main-slider .main-slide .slide-img-cover .slide-img {
    display: block;
    margin: 0 auto;
    max-width: 100%;
    max-height: 100%;
    opacity: 0;
}
.main-slider .main-slide .slide-img-cover .lable-bike {
    position: absolute;
    top: 0;
    right: 92px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    background-color: #fff;
    z-index: 2;
    min-width: 270px;
    -webkit-box-shadow: 0px 0px 30px rgba(25, 35, 48, 0.08);
    box-shadow: 0px 0px 30px rgba(25, 35, 48, 0.08);
    opacity: 0;
}
.main-slider .main-slide .slide-img-cover .lable-bike:before {
    content: "";
    position: absolute;
    border: 45px solid transparent;
    border-left: 20px solid #fff;
    top: 0;
    left: 100%;
    height: 100%;
}
.main-slider .main-slide .slide-img-cover .lable-bike .lable-bike-img {
    width: 89px;
    height: 100%;
}
.main-slider .main-slide .slide-img-cover .lable-bike .lable-bike-img img {
    width: 100%;
    height: 100%;
    display: block;
    -o-object-fit: cover;
    object-fit: cover;
}
.main-slider .main-slide .slide-img-cover .lable-bike .lable-bike-item {
    text-align: left;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 0 20px 0 30px;
    min-width: 190px;
}
.main-slider .main-slide .slide-img-cover .lable-bike .lable-bike-item .model {
    font-weight: 700;
    font-size: 18px;
    text-transform: uppercase;
    color: #192330;
}
.main-slider .main-slide .slide-img-cover .lable-bike .lable-bike-item .price {
    font-family: "Teko", sans-serif;
    color: #ffd910;
    font-weight: 600;
    font-size: 36px;
    line-height: 1;
    text-transform: uppercase;
}
/* ... */

